syntax = "proto3";

package calculator;


option java_package = "com.proto.calculator";
option java_multiple_files = true;


message Parameters {
    int64 firstItem =1 ;
    int64 secondItem = 2;
}

message CalculatorRequest {
    Parameters params = 1 ;
}

message CalculatorResponse{
    double result = 1;
}

message PrimeNumberRequest{
    int64 primeNumber = 1;
}
message AverageNumberRequest{
    int64 number = 1;
}
service Summation{
    rpc Sum (CalculatorRequest) returns (CalculatorResponse);
    rpc Decompose(PrimeNumberRequest) returns(stream CalculatorResponse);
    rpc Average(stream AverageNumberRequest )returns (CalculatorResponse);
    
}